--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "cross-env NODE_ENV=development node server.js",
+    "start:prod": "cross-env NODE_ENV=production node server.js"
+
   },
   "dependencies": {
     "alea": "^1.0.1",
@@ -11,5 +13,8 @@
     "express": "^4.17.1",
     "simplex-noise": "^3.0.1",
     "socket.io": "^4.5.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
