Add initial training artifacts for PPO Minecraft run
- Created event file for training metrics.
- Added parameters configuration in JSON format.
- Included serialized parameters in pickle format.
- Initialized result JSON file for storing outcomes.

--- a/backend/python-rl/config.yaml
+++ b/backend/python-rl/config.yaml
@@ -65,7 +65,7 @@ ppo:
 # WebSocket Configuration
 # ==============================================================
 websocket:
-  host: "localhost"
+  host: "0.0.0.0"
   port: 8765
 
 # ==============================================================
