--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "socket.io": "^4.5.0",
     "three": "^0.132.2"
   },
