fix(npc): Update game time limit to 90 seconds in NPC behavior configuration

--- a/backend/python-rl/config.yaml
+++ b/backend/python-rl/config.yaml
@@ -1,5 +1,6 @@
 # ==============================================================
 # Environment Configuration
+# FILE: backend/python-rl/config.yaml
 # ==============================================================
 environment:
   observation_size: 94
